sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:19: error: not found: value cpt
    while (cpt!=0)
           ^